spacing fixes

--- a/src/packages/site/public/css/theme.css
+++ b/src/packages/site/public/css/theme.css
@@ -631,7 +631,7 @@ button:hover {
 .header-logo {
 	width: 100%;
 	position: absolute;
-	top: 8%;
+	top: 3%;
 }
 
 .header-logo img {
